﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.12.1.5) experimental; urgency=low

  * osdefinedfunctions: delLocalVar : fix removing loopvar after empty loop

-- Detlef Oertel <d.oertel@uib.de>  Thu, 06 Jun 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.4) experimental; urgency=low

  * osfunc: more logging around gettemppath
  * osparser: enabled getHWBiosInfoMap again
  Linux only:
    * osfunclin: getpackagelock: fix memory leak
    * osfunclin: new: function getLinuxDistroName : string;
    * osfunclin: new: function getLinuxDistroRelease : string;
    * osfunclin: new: function getLinuxDistroDescription
    * osmain: GetTempPath: if Univention temppath is /var/tmp
    * osparser: createandprocessscript: check for depotmount
    * osparser: createandprocessscript: give some distro infos in log

-- Detlef Oertel <d.oertel@uib.de>  Mon, 03 Jun 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.3) experimental; urgency=low

  * shellInAnIcon: on loglevel 9: reread teporary files and do not delete
  * oslog: logdatei property usedloglevel (this is real used log level with force_min_loglevel)
  * osfunclin: new function getMyIpDeciceByDefaultRoute
  * osparser: GetMACAddress2: use getMyIpDeciceByDefaultRoute
  * osfunclin: more logging in getMyIpDeciceByDefaultRoute, getMyIpByDefaultRoute
  * osparser: demandlicensekey: try 3 ways to get the own fqdn
  * osfunc: createtextfile: Message:'Directory ' + dirname + ' did not exist und was created' now on loglevel 6 (was warning)
  * osfunc: StartProcess_cp_el: minor logging change ; //no {$OVERFLOWCHECKS ON}
  * osfunc / osfuncwin: replace 'exitCode := lpExitCode;' by 'exitCode := longint(lpExitCode);'

-- Detlef Oertel <d.oertel@uib.de>  Tue, 14 May 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.2) stable; urgency=low
